edit message,part 4

--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -780,13 +780,23 @@ transform()
     padding-left 95px
     padding-right 15px
 
+.answer-block
+  width 100%
+  .input-group-btn
+    display block
+    width auto
+    margin-top 5px
+
 .message-textarea
   width 100%
   overflow hidden
+  display block
 
 .edit-message
   .btn
     border-width 2px
+  .answer-block
+    padding-bottom 20px
 
 .edit-textarea
   margin 5px 0
