--- a/vonline_be/war/partials/adverts-single.html
+++ b/vonline_be/war/partials/adverts-single.html
@@ -1,5 +1,5 @@
 
-<section class="talks-block ng-cloak">
+<section class="adverts-block ng-cloak">
 
     <section class="forum adverts-single" infinite-scroll="adverts.addMoreItems()">
 
@@ -97,7 +97,9 @@
                                 </div>
                             </div>
                             <div class="answer-input" ng-show="adverts.fullAdvertTopic.answerInputIsShow">
-                                <textarea ng-model="adverts.answerFirstMessage" class="no-resize" ng-keyup="base.messageChange($event,2)"
+                                <div ng-include="'templates/createMessage.html'" onload="ctrlMessage=adverts; ctrlId = adverts.fullAdvertTopic.id; initCreateMessage(ctrlId);"></div>
+
+                                <!--<textarea ng-model="adverts.answerFirstMessage" class="no-resize" ng-keyup="base.messageChange($event,2)"
                                           onblur="if(this.value=='') this.value='Ваш ответ';"
                                           onfocus="if(this.value=='Ваш ответ') this.value='';"></textarea>
 
@@ -123,7 +125,7 @@
 
                                     <a class="btn btn-sm no-border btn-primary" href="#" ng-click="adverts.addSingleFirstMessage($event,adverts.fullAdvertTopic.id)">Отправить</a>
                                     <span class="error-info" ng-show="adverts.isCreateFirstMessageError">{{adverts.createFirstMessageErrorText}}</span>
-                                </div>
+                                </div>-->
 
                             </div>
                         </div>
@@ -147,24 +149,29 @@
 
                                             <div class="message-tools pull-right" ng-show="firstMessage.userInfo.id == base.me.id">
                                                 <a href="#" title="Удалить" class="message-delete-link pull-right" ng-click="base.deleteMessage(firstMessage,adverts.fullAdvertFirstMessages,false,false)">&times;</a>
-                                                <a href="#" title="Редактировать" ng-click="base.setEdit(firstMessage)" class="fa fa-pencil pull-right"></a>
+                                                <a href="#" title="Редактировать" ng-click="base.setEdit(firstMessage,true)" class="fa fa-pencil pull-right"></a>
                                             </div>
 
                                             <h2><a ui-sref="profile({userId: {{ firstMessage.userInfo.id }} })">{{ firstMessage.userInfo.firstName +" "+ firstMessage.userInfo.lastName}}</a></h2>
-                                            <p ng-hide="firstMessage.isEdit">{{firstMessage.content}}</p>
 
-                                            <div class="edit-message" ng-show="firstMessage.isEdit">
-                                                <textarea class="no-resize message-textarea edit-textarea" ng-model="firstMessage.content" ng-keyup="base.messageChange($event)"></textarea>
-                                                <a class="btn btn-sm btn-primary no-border message-edit-save" ng-click="base.saveEditedMessage(firstMessage,false)" href="#">Сохранить</a> <!--  -->
+                                            <div ng-hide="firstMessage.isEdit">
+                                                <p>{{firstMessage.content}}</p>
+
+                                                <div class="attached">
+                                                    <a href="{{image.URL}}" ng-click="$event.preventDefault()" class="fancybox" rel="attached-group-{{adverts.fullAdvertTopic.id+'-'+firstMessage.id}}" ng-repeat="image in firstMessage.images">
+                                                        <img ng-src="{{image.URL}}" alt="картинка"/>
+                                                    </a>
+                                                    <div class="docs">
+                                                        <div ng-repeat="document in firstMessage.documents"><a ng-href="{{document.URL}}" class="doc-item">{{document.fileName}}</a></div>
+                                                    </div>
+                                                </div>
                                             </div>
 
-                                            <div class="attached">
-                                                <a href="{{image.URL}}" ng-click="$event.preventDefault()" class="fancybox" rel="attached-group-{{adverts.fullAdvertTopic.id+'-'+firstMessage.id}}" ng-repeat="image in firstMessage.images">
-                                                    <img ng-src="{{image.URL}}" alt="картинка"/>
-                                                </a>
-                                                <div class="docs">
-                                                    <div ng-repeat="document in firstMessage.documents"><a ng-href="{{document.URL}}" class="doc-item">{{document.fileName}}</a></div>
-                                                </div>
+                                            <div class="edit-message" ng-show="firstMessage.isEdit">
+                                                <div ng-include="'templates/editMessage.html'" onload="ctrlMessage=firstMessage; ctrlId = adverts.fullAdvertTopic.id+'-'+firstMessage.id; initCreateMessage(ctrlId,true);"></div>
+
+                                                <!--<textarea class="no-resize message-textarea edit-textarea" ng-model="firstMessage.content" ng-keyup="base.messageChange($event)"></textarea>
+                                                <a class="btn btn-sm btn-primary no-border message-edit-save" ng-click="base.saveEditedMessage(firstMessage,false)" href="#">Сохранить</a> &lt;!&ndash;  &ndash;&gt;-->
                                             </div>
 
                                             <div class="message-bottom">
@@ -175,7 +182,10 @@
                                     </div>
 
                                     <div class="answer-input" ng-show="firstMessage.answerInputIsShow">
-                                        <textarea ng-model="firstMessage.answerMessage" class="no-resize" ng-keyup="base.messageChange($event,2)"
+                                        <div ng-include="'templates/createMessage.html'" onload="ctrlMessage=firstMessage; ctrlTopicId = adverts.fullAdvertTopic.id;
+                                         ctrlParent=adverts;ctrlId = adverts.fullAdvertTopic.id+'-'+firstMessage.id; initCreateMessage(ctrlId);"></div>
+
+                                        <!--<textarea ng-model="firstMessage.answerMessage" class="no-resize" ng-keyup="base.messageChange($event,2)"
                                                   onblur="if(this.value=='') this.value='Ваш ответ';"
                                                   onfocus="if(this.value=='Ваш ответ') this.value='';"></textarea>
 
@@ -201,7 +211,7 @@
 
                                             <a class="btn btn-sm no-border btn-primary" href="#" ng-click="adverts.addSingleMessage($event,adverts.fullAdvertTopic.id,firstMessage)">Отправить</a>
                                             <span class="error-info" ng-show="adverts.isCreateMessageToFirstError">{{adverts.createMessageToFirstErrorText}}</span>
-                                        </div>
+                                        </div>-->
 
                                     </div>
                                 </div>
@@ -225,24 +235,30 @@
                                                 <div class="topic-right">
                                                     <div class="message-tools pull-right" ng-show="message.userInfo.id == base.me.id">
                                                         <a href="#" title="Удалить" class="message-delete-link pull-right" ng-click="base.deleteMessage(message,adverts.fullAdvertMessages[firstMessage.id],false,false)">&times;</a>
-                                                        <a href="#" title="Редактировать" ng-click="base.setEdit(message)" class="fa fa-pencil pull-right"></a>
+                                                        <a href="#" title="Редактировать" ng-click="base.setEdit(message,true)" class="fa fa-pencil pull-right"></a>
                                                     </div>
 
                                                     <h2><a ui-sref="profile({ userId : {{ message.userInfo.id }} })">{{message.userInfo.firstName+" "+message.userInfo.lastName}}</a></h2>
-                                                    <p ng-hide="message.isEdit">{{message.content}}</p>
 
-                                                    <div class="edit-message" ng-show="message.isEdit">
-                                                        <textarea class="no-resize message-textarea edit-textarea" ng-model="message.content" ng-keyup="base.messageChange($event)"></textarea>
-                                                        <a class="btn btn-sm btn-primary no-border message-edit-save" ng-click="base.saveEditedMessage(message,false)" href="#">Сохранить</a> <!--  -->
+                                                    <div ng-hide="message.isEdit">
+                                                        <p>{{message.content}}</p>
+
+                                                        <div class="attached">
+                                                            <a href="{{image.URL}}" ng-click="$event.preventDefault()" class="fancybox" rel="attached-group-{{adverts.fullAdvertTopic.id+'-'+message.id}}" ng-repeat="image in message.images">
+                                                                <img ng-src="{{image.URL}}" alt="картинка"/>
+                                                            </a>
+                                                            <div class="docs">
+                                                                <div ng-repeat="document in message.documents"><a ng-href="{{document.URL}}" class="doc-item">{{document.fileName}}</a></div>
+                                                            </div>
+                                                        </div>
                                                     </div>
 
-                                                    <div class="attached">
-                                                        <a href="{{image.URL}}" ng-click="$event.preventDefault()" class="fancybox" rel="attached-group-{{adverts.fullAdvertTopic.id+'-'+message.id}}" ng-repeat="image in message.images">
-                                                            <img ng-src="{{image.URL}}" alt="картинка"/>
-                                                        </a>
-                                                        <div class="docs">
-                                                            <div ng-repeat="document in message.documents"><a ng-href="{{document.URL}}" class="doc-item">{{document.fileName}}</a></div>
-                                                        </div>
+                                                    <div class="edit-message" ng-show="message.isEdit">
+                                                        <div ng-include="'templates/editMessage.html'" onload="ctrlMessage=message; ctrlId = adverts.fullAdvertTopic.id+'-'+message.id;
+                                                        ctrlTopicId = adverts.fullAdvertTopic.id;ctrlParent=adverts; initCreateMessage(ctrlId,true);"></div>
+
+                                                        <!--<textarea class="no-resize message-textarea edit-textarea" ng-model="message.content" ng-keyup="base.messageChange($event)"></textarea>
+                                                        <a class="btn btn-sm btn-primary no-border message-edit-save" ng-click="base.saveEditedMessage(message,false)" href="#">Сохранить</a> &lt;!&ndash;  &ndash;&gt;-->
                                                     </div>
 
                                                     <div class="message-bottom">
@@ -253,7 +269,11 @@
                                             </div>
 
                                             <div class="answer-input" ng-show="message.answerInputIsShow">
-                                                <textarea ng-model="message.answerMessage" class="no-resize" ng-keyup="base.messageChange($event,2)"
+                                                <div ng-include="'templates/createMessage.html'" onload="ctrlMessage=message; ctrlTopicId = adverts.fullAdvertTopic.id;
+                                         ctrlParent=adverts;ctrlId = adverts.fullAdvertTopic.id+'-'+message.id;
+                                         ctrlFirstMessage=firstMessage; initCreateMessage(ctrlId);"></div>
+
+                                                <!--<textarea ng-model="message.answerMessage" class="no-resize" ng-keyup="base.messageChange($event,2)"
                                                           onblur="if(this.value=='') this.value='Ваш ответ';"
                                                           onfocus="if(this.value=='Ваш ответ') this.value='';"></textarea>
 
@@ -280,7 +300,7 @@
 
                                                     <a class="btn btn-sm no-border btn-primary" href="#" ng-click="adverts.addSingleMessage($event,adverts.fullAdvertTopic.id,firstMessage,message)">Отправить</a>
                                                     <span class="error-info" ng-show="adverts.isCreateMessageError">{{adverts.createMessageErrorText}}</span>
-                                                </div>
+                                                </div>-->
 
                                             </div>
                                         </div>
