--- a/vonline_be/war/templates/editMessage.html
+++ b/vonline_be/war/templates/editMessage.html
@@ -5,13 +5,23 @@
               onfocus="if(this.value=='Ваш ответ') this.value='';" ></textarea>
 
 
-            <div id="attach-area-{{ctrlId}}" class="attach-area">
-                <div class="loading hidden">
-                    <img ng-src="i/loading2.gif" alt="картинка"/>
-                </div>
-            </div>
-            <div id="attach-doc-area-{{ctrlId}}" class="attach-area attach-area-doc"></div>
+        <div class="attach-area" id="attach-area-edit-{{ctrlId}}">
 
+            <span class="attach-item" ng-repeat="image in ctrlMessage.images">
+                <a href="#" title="Не прикреплять" class="remove-attach-img" ng-click="base.removeAttach(ctrlMessage,$index,true)">×</a>
+                <img data-title="{{image.fileName}}" data-type="{{image.contentType}}" class="attached-img" style="background-image:url('{{image.URL}}')">
+            </span>
+
+            <div class="loading hidden">
+                <img ng-src="i/loading2.gif" alt="картинка"/>
+            </div>
+        </div>
+        <div class="attach-area attach-area-doc" id="attach-doc-area-edit-{{ctrlId}}">
+            <span class="attach-item" data-fakepath="{{doc.fileName}}"  ng-repeat="doc in ctrlMessage.documents">
+                <a href="#" title="Не прикреплять" class="remove-attach-img" ng-click="base.removeAttach(ctrlMessage,$index,false)">×</a>
+                {{doc.fileName}}
+            </span>
+        </div>
 
     <span class="input-group-btn" ng-show="ctrlMessage.answerShow">
         <!--<button class="btn btn-sm btn-info no-radius no-border" type="button" ng-click="lenta.createWallComment($event,ctrlMessage)">-->
@@ -24,7 +34,7 @@
 
          используются только для создания сообщений НЕ первого уровня в обсуждении
          -->
-        <button class="btn btn-sm btn-info no-radius no-border" type="button" ng-click="createMessage($event,ctrlMessage,ctrlTopicId,ctrlParent,ctrlFirstMessage)">
+        <button class="btn btn-sm btn-info no-radius no-border" type="button" ng-click="createMessage($event,ctrlMessage,ctrlTopicId,ctrlParent)">
             <i class="icon-share-alt"></i>
             Отправить
         </button>
@@ -37,8 +47,8 @@
             </button>
 
             <ul class="dropdown-menu dropdown-blue">
-                <li><input id="attachImage-{{ctrlId}}" type="file"/></li>
-                <li><input id="attachDoc-{{ctrlId}}" type="file"/></li>
+                <li><input id="attachImage-edit-{{ctrlId}}" type="file"/></li>
+                <li><input id="attachDoc-edit-{{ctrlId}}" type="file"/></li>
             </ul>
         </div>
     </span>
