--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -496,6 +496,7 @@ transform()
   >.topic-descr
     background #ddedf6
     padding 5px
+    padding-bottom 0
 
 .dd>.dd-list>.topic-item.list-view>.dd-list
   padding-left 30px
@@ -590,6 +591,8 @@ transform()
     overflow hidden
   .message-input-bottom
     margin-top 15px
+  .talk-subject
+    margin-bottom 10px
 
 .talks-single .message-input
 .adverts-single .message-input
@@ -785,7 +788,8 @@ transform()
   .input-group-btn
     display block
     width auto
-    margin-top 5px
+    margin-top 10px
+    margin-bottom 10px
 
 .message-textarea
   width 100%
