--- a/vonline_be/war/partials/profile.html
+++ b/vonline_be/war/partials/profile.html
@@ -24,7 +24,7 @@
                     <div class="user-body-right">
                         <div class="profile-item" ng-show="profile.userProfile.userInfo.birthday != null || profile.userProfile.userInfo.gender != null">
                             <div ng-show="profile.userProfile.userInfo.birthday != null && profile.userProfile.userInfo.birthday != 0"><span>День рождения:</span>{{profile.userProfile.userInfo.birthday}}</div>
-                            <div ng-show="profile.userProfile.userInfo.gender != null"><span>Пол: </span> {{profile.userProfile.userInfo.genderMeta}}</div>
+                            <!--<div ng-show="profile.userProfile.userInfo.gender != null"><span>Пол: </span> {{profile.userProfile.userInfo.genderMeta}}</div>-->
                         </div>
 
                         <div class="profile-item" ng-show="profile.userProfile.contacts.mobilePhone != null || profile.userProfile.contacts.email != null">
