--- a/vonline_be/war/templates/createTopic.html
+++ b/vonline_be/war/templates/createTopic.html
@@ -1,10 +1,10 @@
 <div class="message-input clearfix">
 
-    <div class="has-info form-group" ng-if="ctrl.isTalk">
-        <input type="text" class="width-100 head" value="Заголовок"
+    <!--<div class="has-info form-group" ng-if="ctrl.isTalk">-->
+        <input type="text" class="width-100 talk-subject" value="Заголовок" ng-if="ctrl.isTalk"
                onblur="if(this.value=='') this.value='Заголовок';"
                onfocus="if(this.value=='Заголовок') this.value='';" ng-model="ctrl.subject" />
-    </div>
+    <!--</div>-->
 
     <textarea ng-model="ctrl.message.content" class="no-resize" ng-keyup="base.messageChange($event,1)"
               onblur="if(this.value=='') this.value='Написать сообщение';"
