--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -289,7 +289,7 @@ transform()
 .widget-main
   overflow auto
   padding 0
-  padding-bottom 5px
+  padding-bottom 15px
 
 .talks-single .widget-main
 .adverts-single .widget-main
@@ -347,7 +347,6 @@ transform()
         float left
         vertical-align middle
     .topic-right
-      margin-left 95px
       h2
         margin-top 0
         font-size 20px
@@ -445,8 +444,12 @@ transform()
         margin-bottom 10px
         font-size 14px
 
-.topic-item .dd-list .topic-right
+
+.dd-list .topic-right //.topic-item
   margin-left 60px
+
+.dd .topic-right
+    margin-left 95px
 
 .dd-list .dd-list
   padding-left 37px
@@ -567,7 +570,7 @@ transform()
 .itemdiv > .user > img
   border-radius 0
 .itemdiv.dialogdiv > .body
-  padding-bottom 28px
+  padding-bottom 20px
 .itemdiv
   padding-right 0
 .btn.active:after
@@ -799,8 +802,6 @@ transform()
 .edit-message
   .btn
     border-width 2px
-  .answer-block
-    padding-bottom 20px
 
 .edit-textarea
   margin 5px 0
