--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -558,6 +558,11 @@ h1 {
 .wysiwyg-editor a {
   cursor: pointer;
 }
+.empty-messages {
+  font-size: 20px;
+  text-align: center;
+  color: #ccc;
+}
 @media all and (max-width: 1280px) {
   .navbar .form-search {
     width: 30%;
