--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -512,6 +512,11 @@ transform()
   a
     cursor pointer
 
+.empty-messages
+  font-size 20px
+  text-align center
+  color #ccc
+
 @media all and (max-width: 1280px)
   .navbar .form-search
     width 30%
