--- a/vonline_be/war/partials/dialog-single.html
+++ b/vonline_be/war/partials/dialog-single.html
@@ -40,6 +40,8 @@
                 </div>
             </div>
 
+            <div ng-show="!dialog.privateMessages || dialog.privateMessages.length == 0" class="empty-messages">{{base.emptyMessage}}</div>
+
             <div class="private-message-single"  ng-repeat="message in dialog.privateMessages">
                 <div class="pull-right">
                     <div class="message-tools clearfix" ng-show="message.author == base.me.id">
