--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -165,6 +165,8 @@ transform()
       list-style none
       display inline-block
       margin 0 5px
+      &:first-child
+        margin-left 0
       a
         color #a6a6a6
   &.footer-left
