--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -577,7 +577,7 @@ transform()
 .itemdiv > .user > img
   border-radius 0
 .itemdiv.dialogdiv > .body
-  padding-bottom 20px
+  padding-bottom 26px
 .itemdiv
   padding-right 0
 .btn.active:after
@@ -792,6 +792,7 @@ transform()
     margin-left -95px
     padding-left 95px
     padding-right 15px
+    font-size 12px
 
 .answer-block
   width 100%
@@ -848,6 +849,7 @@ transform()
 
 .itemdiv.dialogdiv > .body
   margin-left 58px
+  font-size 14px
 
 .avatar
   width 80px
