--- a/vonline_be/war/templates/createTopic.html
+++ b/vonline_be/war/templates/createTopic.html
@@ -6,9 +6,13 @@
                onfocus="if(this.value=='Заголовок') this.value='';" ng-model="ctrl.subject" />
     <!--</div>-->
 
+    <!--<textarea ng-model="ctrl.message.content" class="no-resize" ng-keyup="base.messageChange($event,1)"
+              ng-blur="if(ctrl.message.content == '') ctrl.message.content=ctrl.message.default;"
+              ng-focus="if(ctrl.message.content == ctrl.message.default) ctrl.message.content='';"></textarea>-->
+
     <textarea ng-model="ctrl.message.content" class="no-resize" ng-keyup="base.messageChange($event,1)"
-              onblur="if(this.value=='') this.value='Написать сообщение';"
-              onfocus="if(this.value=='Написать сообщение') this.value='';"></textarea>
+              ng-blur="base.textareaBlur(ctrl.message.content,ctrl.message.default,ctrl)" ng-focus="base.textareaFocus(ctrl.message.content,ctrl.message.default,ctrl)"
+              ></textarea>
 
     <div class="create-poll" ng-show="ctrl.isPollShow">
         <a class="poll-cancel pull-right" title="отмена опроса" href="#" ng-click="ctrl.isPollShow = false;ctrl.isPollAvailable = true;">&times;</a>
