edit private messages

--- a/vonline_be/war/css/profile.css
+++ b/vonline_be/war/css/profile.css
@@ -52,6 +52,9 @@
   margin: 15px 0 0 0;
   line-height: 26px;
 }
+.user-descr .text-area .user-body .user-body-left .btn {
+  padding: 4px 8px;
+}
 .user-descr .text-area .user-body .profile-item {
   border-bottom: 1px solid #cecece;
   padding-bottom: 10px;
