--- a/vonline_be/war/css/profile.styl
+++ b/vonline_be/war/css/profile.styl
@@ -40,6 +40,8 @@
     .user-body
       margin 15px 0 0 0
       line-height 26px
+      .user-body-left .btn
+        padding 4px 8px
       .profile-item
         border-bottom 1px solid #cecece
         padding-bottom 10px
