--- a/vonline_be/war/templates/editMessage.html
+++ b/vonline_be/war/templates/editMessage.html
@@ -41,7 +41,7 @@
         <span class="error-info" ng-show="ctrlMessage.isCreateCommentError" ng-click>{{ctrlMessage.createCommentErrorText}}</span>
 
         <div class="btn-group attach-dropdown pull-right">
-            <button data-toggle="dropdown" class="btn btn-info btn-sm dropdown-toggle no-border" data-producerid="0">
+            <button data-toggle="dropdown" class="btn btn-info btn-sm dropdown-toggle no-border">
                 <span class="btn-group-text">Прикрепить</span>
                 <span class="icon-caret-down icon-on-right"></span>
             </button>
