--- a/vonline_be/war/partials/dialog-single.html
+++ b/vonline_be/war/partials/dialog-single.html
@@ -9,7 +9,10 @@
                     <div class="avatar short2" style="background-image: url({{user.avatar}})" ng-repeat="user in dialog.users"></div>
                 </div>
                 <div class="dialog-send-center">
-                    <textarea ng-model="dialog.messageText" class="no-resize" ng-keyup="base.messageChange($event,1)"
+                    
+                    <div ng-include="'templates/createMessage.html'" onload="ctrlMessage=dialog; ctrlId = '000'; initCreateMessage(ctrlId);"></div>
+
+                    <!--<textarea ng-model="dialog.messageText" class="no-resize" ng-keyup="base.messageChange($event,1)"
                               onblur="if(this.value=='') this.value='Написать сообщение';"
                               onfocus="if(this.value=='Написать сообщение') this.value='';"></textarea>
 
@@ -36,7 +39,7 @@
                         </div>
 
                         <a class="btn btn-sm btn-primary no-border" ng-click="dialog.sendMessage()" href="#">Отправить</a>
-                    </div>
+                    </div>-->
                 </div>
             </div>
 
@@ -56,20 +59,26 @@
                     </div>
                     <div class="private-message-author">
                         <div><a ui-sref="profile({ userId : {{ message.authorProfile.userInfo.userId }} })">{{message.authorProfile.userInfo.firstName + " "+ message.authorProfile.userInfo.lastName}}</a></div> <!--  -->
-                        <p ng-hide="message.isEdit">{{message.content}}</p>
 
-                        <div class="edit-message" ng-show="message.isEdit">
-                            <textarea class="no-resize message-textarea edit-textarea" ng-model="message.content" ng-keyup="base.messageChange($event)"></textarea>
-                            <a class="btn btn-sm btn-primary no-border message-edit-save" ng-click="base.saveEditedMessage(message,true,true)" href="#">Сохранить</a> <!--  -->
+                        <div ng-hide="message.isEdit">
+                            <p>{{message.content}}</p>
+
+                            <div class="attached">
+                                <a href="{{image.URL}}" class="fancybox" ng-click="$event.preventDefault()" rel="attached-group-dialog-{{message.id}}" ng-repeat="image in message.images">
+                                    <img ng-src="{{image.URL}}" alt="картинка"/>
+                                </a>
+                                <div class="docs">
+                                    <div ng-repeat="document in message.documents"><a ng-href="{{document.URL}}" class="doc-item">{{document.fileName}}</a></div>
+                                </div>
+                            </div>
+
                         </div>
 
-                        <div class="attached">
-                            <a href="{{image.URL}}" class="fancybox" ng-click="$event.preventDefault()" rel="attached-group-dialog-{{message.id}}" ng-repeat="image in message.images">
-                                <img ng-src="{{image.URL}}" alt="картинка"/>
-                            </a>
-                            <div class="docs">
-                                <div ng-repeat="document in message.documents"><a ng-href="{{document.URL}}" class="doc-item">{{document.fileName}}</a></div>
-                            </div>
+                        <div class="edit-message" ng-show="message.isEdit">
+                            <div ng-include="'templates/editMessage.html'" onload="ctrlMessage=message; ctrlId = dialog.dialogId+'-'+message.id; initCreateMessage(ctrlId,true);"></div>
+
+                            <!--<textarea class="no-resize message-textarea edit-textarea" ng-model="message.content" ng-keyup="base.messageChange($event)"></textarea>
+                            <a class="btn btn-sm btn-primary no-border message-edit-save" ng-click="base.saveEditedMessage(message,true,true)" href="#">Сохранить</a>-->
                         </div>
 
                     </div>
