--- a/vonline_be/war/templates/createTopic.html
+++ b/vonline_be/war/templates/createTopic.html
@@ -1,17 +1,11 @@
 <div class="message-input clearfix">
 
-    <!--<div class="has-info form-group" ng-if="ctrl.isTalk">-->
-        <input type="text" class="width-100 talk-subject" value="Заголовок" ng-if="ctrl.isTalk"
-               onblur="if(this.value=='') this.value='Заголовок';"
-               onfocus="if(this.value=='Заголовок') this.value='';" ng-model="ctrl.subject" />
-    <!--</div>-->
-
-    <!--<textarea ng-model="ctrl.message.content" class="no-resize" ng-keyup="base.messageChange($event,1)"
-              ng-blur="if(ctrl.message.content == '') ctrl.message.content=ctrl.message.default;"
-              ng-focus="if(ctrl.message.content == ctrl.message.default) ctrl.message.content='';"></textarea>-->
+    <input type="text" class="width-100 talk-subject" value="Заголовок" ng-if="ctrl.isTalk"
+           onblur="if(this.value=='') this.value='Заголовок';"
+           onfocus="if(this.value=='Заголовок') this.value='';" ng-model="ctrl.subject" />
 
     <textarea ng-model="ctrl.message.content" class="no-resize" ng-keyup="base.messageChange($event,1)"
-              ng-blur="base.textareaBlur(ctrl.message.content,ctrl.message.default,ctrl)" ng-focus="base.textareaFocus(ctrl.message.content,ctrl.message.default,ctrl)"
+              ng-blur="base.textareaBlur(ctrl.message.content,ctrl.message.default,ctrl,true)" ng-focus="base.textareaFocus(ctrl.message.content,ctrl.message.default,ctrl,true)"
               ></textarea>
 
     <div class="create-poll" ng-show="ctrl.isPollShow">
