--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -1088,8 +1088,20 @@ h1 {
 .private-messages .dialogs-container {
   margin-top: 15px;
 }
-.dialog .dialogs-container .private-message-single:hover,
-.private-messages .dialogs-container .private-message-single:hover {
+.dialog .dialogs-container .dialog-item,
+.private-messages .dialogs-container .dialog-item {
+  overflow: auto;
+  padding: 10px;
+  padding-left: 0;
+  cursor: pointer;
+  border-bottom: 1px solid #ccc;
+}
+.dialog .dialogs-container .dialog-item:first-child,
+.private-messages .dialogs-container .dialog-item:first-child {
+  border-top: 1px solid #ccc;
+}
+.dialog .dialogs-container .dialog-item:hover,
+.private-messages .dialogs-container .dialog-item:hover {
   background-color: #f6fcff;
 }
 .dialog h2,
@@ -1098,10 +1110,9 @@ h1 {
 }
 .dialog .private-message-single,
 .private-messages .private-message-single {
-  cursor: pointer;
   padding: 10px;
+  padding-bottom: 12px;
   padding-left: 0;
-  overflow: auto;
   border-bottom: 1px solid #ccc;
 }
 .dialog .private-message-single:first-child,
@@ -1137,13 +1148,16 @@ h1 {
 .private-messages .private-message-single .private-message-right {
   margin-left: 320px;
 }
-.private-messages .private-message-single .private-message-left {
+.private-messages .private-message-single .private-message-left,
+.private-messages .dialog-item .private-message-left {
   line-height: 65px;
 }
-.private-messages .private-message-single .private-message-left .private-message-left {
+.private-messages .private-message-single .private-message-left .private-message-left,
+.private-messages .dialog-item .private-message-left .private-message-left {
   width: 300px;
 }
-.private-messages .private-message-single .private-message-left .private-message-author {
+.private-messages .private-message-single .private-message-left .private-message-author,
+.private-messages .dialog-item .private-message-left .private-message-author {
   display: inline-block;
   vertical-align: middle;
   line-height: 18px;
