--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -703,6 +703,9 @@ transform()
       max-width 150px
       max-height 150px
 
+.dialogdiv .attached
+  padding-bottom 0
+
 .create-poll
   margin-bottom 10px
   h5
