--- a/vonline_be/war/partials/dialog-single.html
+++ b/vonline_be/war/partials/dialog-single.html
@@ -68,7 +68,7 @@
                                     <img ng-src="{{image.URL}}" alt="картинка"/>
                                 </a>
                                 <div class="docs">
-                                    <div ng-repeat="document in message.documents"><a ng-href="{{document.URL}}" class="doc-item">{{document.fileName}}</a></div>
+                                    <div ng-repeat="document in message.documents"><a ng-href="{{document.URL}}" target="_blank" class="doc-item">{{document.fileName}}</a></div>
                                 </div>
                             </div>
 
